[gd_scene load_steps=10 format=2]

[ext_resource path="res://grafika/bg_start.png" type="Texture" id=1]
[ext_resource path="res://grafika/title.png" type="Texture" id=2]
[ext_resource path="res://grafika/play.png" type="Texture" id=3]
[ext_resource path="res://grafika/play_pressed.png" type="Texture" id=4]
[ext_resource path="res://grafika/exit.png" type="Texture" id=5]
[ext_resource path="res://grafika/exit_pressed.png" type="Texture" id=6]
[ext_resource path="res://grafika/musiconoff.png" type="Texture" id=7]
[ext_resource path="res://src/Menu.gd" type="Script" id=8]
[ext_resource path="res://dzwiek/Klik_menu.wav" type="AudioStream" id=9]

[node name="Menu" type="Node2D"]
script = ExtResource( 8 )

[node name="bg_menu" type="TextureRect" parent="."]
margin_left = -1.0
margin_right = 399.0
margin_bottom = 712.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="bg_menu"]
margin_left = 20.0
margin_top = 64.0
margin_right = 380.0
margin_bottom = 144.0
texture = ExtResource( 2 )

[node name="play" type="TouchScreenButton" parent="."]
position = Vector2( 197, 287 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="exit" type="TouchScreenButton" parent="."]
position = Vector2( 43, 430 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="music" type="TouchScreenButton" parent="."]
position = Vector2( 261, 526 )
scale = Vector2( 1.675, 1.775 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="audioMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 24.0
[connection signal="released" from="play" to="." method="_on_play_released"]
[connection signal="released" from="exit" to="." method="_on_exit_released"]
[connection signal="released" from="music" to="." method="_on_music_released"]
